--- a/peat-trending-units/src/partials/header.html
+++ b/peat-trending-units/src/partials/header.html
@@ -7,7 +7,7 @@
 					style="mso-hide:all !important" />
 			</a>
 		</column>
-		<column class="blu-header right-header text-right">
+		<column class="blu-header header-tagline right-header text-right">
 			<p class="header-tagline">
 				Your vacation is our full-time job
 			</p>
@@ -16,7 +16,7 @@
 </container>
 <container>
 	<row>
-		<column class="padding-b">
+		<column class="padding-b-large">
 			<!--pad-row-->
 		</column>
 	</row>
