--- a/peat-trending-units/src/CSS/cta.css
+++ b/peat-trending-units/src/CSS/cta.css
@@ -12,7 +12,7 @@
   .cta h1 {
     font-size: 38px !important;
     letter-spacing: -0.5px !important;
-    line-height: 38px !important;
+    line-height: 42px !important;
   }
 
   .cta h2 {
@@ -83,6 +83,7 @@ h2 {
   font-size: 21px;
   letter-spacing: -0.2px;
   line-height: 28px;
+  font-weight: 400;
 }
 
 .cta p.sub-body {
