--- a/peat-trending-units/src/CSS/search.css
+++ b/peat-trending-units/src/CSS/search.css
@@ -3,9 +3,18 @@
     padding-top: 16px !important;
   }
   .search-bottom {
-    padding-right: 24px !important;
-    padding-left: 24px !important;
     padding-bottom: 16px !important;
+  }
+  .search-top h3 {
+    font-size: 24px !important;
+    font-weight: 500 !important;
+    letter-spacing: -0.82px !important;
+    line-height: 38px !important;
+  }
+  .search-top p {
+    font-size: 14px !important;
+    font-weight: normal !important;
+    line-height: 20px !important;
   }
 }
 
@@ -30,10 +39,18 @@
   margin: 0;
   color: #ffffff;
   font-size: 28px;
-  font-family: "Wigrum", Helvetica, Arial, sans-serif;
+  font-family: "wigrum-medium", Helvetica, Arial, sans-serif;
   text-align: left;
   font-weight: bold;
   letter-spacing: -0.82px;
   line-height: 32px;
-  display: inline-block;
+}
+.search-top p {
+  margin: 0;
+  color: #ffffff;
+  font-size: 16px;
+  font-family: "wigrum-medium", Helvetica, Arial, sans-serif;
+  text-align: left;
+  font-weight: 500;
+  line-height: 32px;
 }
