--- a/peat-trending-units/src/CSS/section.css
+++ b/peat-trending-units/src/CSS/section.css
@@ -12,7 +12,7 @@
 }
 
 @media only screen and (max-width: 500px) {
-  .section h2 {
+  .section h3 {
     font-size: 21px !important;
     letter-spacing: -0.5px !important;
     line-height: 28px !important;
@@ -24,18 +24,19 @@
 }
 
 .section h2,
+h3,
 p,
 img {
   margin: 0;
 }
 
-.section h2 {
+.section h3 {
   color: #2c3439;
-  font-size: 21px;
-  font-family: "Wigrum", Helvetica, Arial, sans-serif;
-  font-weight: bold;
+  font-size: 28px;
+  font-family: "wigrum-medium", Helvetica, Arial, sans-serif;
+  font-weight: 500;
   letter-spacing: -0.5px;
-  line-height: 28px;
+  line-height: 36px;
 }
 
 .section h2.tertiary {
