--- a/peat-trending-units/src/partials/search.html
+++ b/peat-trending-units/src/partials/search.html
@@ -1,17 +1,24 @@
 <container>
 	<row class="search">
-		<column class="search-top gutter" style="background: #003349;">
+		<column class="search-top gutter mobile-padding-med" style="background: #003349;">
 			<a href="https://vacasa.com{{{ utm_new }}}" target="_blank">
-				<h3>Find a vacation rental</h3>
+				<h3>Find your new favorite</h3>
+				<p>Search over 25,000 Vacasa homes</p>
 			</a>
 		</column>
 	</row>
 	<row>
-		<column class="search-bottom" style="background: #003349;">
+		<column class="search-bottom mobile-padding-med" style="background: #003349;">
 			<a href="https://vacasa.com{{{ utm_new }}}" target="_blank">
 				<img width="561" height="40" src="https://static-assets.boise.vacasa.com/peat/search-bar.png"
 					alt="Search for a vacation rental" />
 			</a>
+		</column>
+	</row>
+</container>
+<container>
+	<row>
+		<column class="padding-b">
 		</column>
 	</row>
 </container>
