--- a/peat-trending-units/src/partials/section-image-header-message-btn.html
+++ b/peat-trending-units/src/partials/section-image-header-message-btn.html
@@ -1,39 +1,15 @@
-<container>
+<container class="section">
 	<row>
-		<column large="6" small="12" class="section padding-b text-left section-container-left">
-			<!-- raw-helper -->
-			<a href="{{{ url }}}" target="_blank">
-
-				<img class="side-image" width="268" src="{{{ image }}}?w=568&ar=4:3&fit=crop&crop=entropy,edges"
-					alt="Open new page to browse {{ name }} on Vacasa.com."></img>
-			</a>
-		</column>
-		<column large="6" small="12" class="section section-container-right">
-			<container class="section-content-container">
-				<row>
-					<column class="padding-b-small">
-						<h2>
-							Try somewhere different in {{ name }}
-						</h2>
-					</column>
-				</row>
-				<row>
-					<column class="padding-b-small">
-						<p class="sub-message">
-							Looking to stay somewhere different in {{ name }}? Check out some of our other homes.
-						</p>
-						<!-- /raw-helper -->
-					</column>
-				</row>
-				<row>
-					<column class="padding-b-small">
-						{{> secondary-button-side label="Book A New Home" url=unit_1_url b_utm=utm_add }}
-					</column>
-				</row>
-			</container>
+		<column class="padding-b-large mobile-padding-med gutter text-center">
+			<h3>
+				Our top vacation home picks for you
+			</h3>
 		</column>
 	</row>
+
 </container>
+{{> image-waterfall }}
+
 <container>
 	<row>
 		<column class="padding-b">
