--- a/peat-trending-units/src/partials/image-waterfall-2.html
+++ b/peat-trending-units/src/partials/image-waterfall-2.html
@@ -6,19 +6,19 @@
 				<row>
 					<column class="wf padding-b-small">
 						<!-- raw-helper -->
-						<a href="{{{ location_1_url }}}{{{ utm_add }}}" target="_blank">
+						<a href="{{{ unit_1_url }}}{{{ utm_add }}}" target="_blank">
 							<img infer="retina" class="wf-img" width="288"
-								src="{{{ location_1_image }}}?w=576&ar=4:3&fit=crop&crop=entropy,edges"
-								alt="Click to view and book {{ location_1_name }} on Vacasa.com" />
+								src="{{{ unit_1_image }}}?w=576&ar=3:4&fit=crop&crop=entropy,edges"
+								alt="Click to view and book {{ unit_1_name }} on Vacasa.com" />
 					</column>
 				</row>
 				<row>
 					<column class="wf padding-b">
-						<p class="wf-loc">
-							Explore {{ location_1_num_units }} homes in
-						</p>
 						<p class="wf-name">
-							{{ location_1_name }}
+							{{ unit_1_name }}
+						</p>
+						<p class="wf-loc">
+							{{ unit_1_location }}
 						</p>
 						</a>
 						<!-- /raw-helper -->
@@ -27,19 +27,19 @@
 				<row>
 					<column class="wf padding-b-small">
 						<!-- raw-helper -->
-						<a href="{{{ location_2_url }}}{{{ utm_add }}}" target="_blank">
+						<a href="{{{ unit_2_url }}}{{{ utm_add }}}" target="_blank">
 							<img infer="retina" class="wf-img" width="288"
-								src="{{{ location_2_image }}}?w=576&ar=3:4&fit=crop&crop=entropy,edges"
-								alt="Click to view and book {{ location_2_name }} on Vacasa.com" />
+								src="{{{ unit_2_image }}}?w=576&ar=4:3&fit=crop&crop=entropy,edges"
+								alt="Click to view and book {{ unit_2_name }} on Vacasa.com" />
 					</column>
 				</row>
 				<row>
 					<column class="wf padding-b">
-						<p class="wf-loc">
-							Explore {{ location_2_num_units }} homes in
-						</p>
 						<p class="wf-name">
-							{{ location_2_name }}
+							{{ unit_2_name }}
+						</p>
+						<p class="wf-loc">
+							{{ unit_2_location }}
 						</p>
 						</a>
 						<!-- /raw-helper -->
@@ -54,19 +54,19 @@
 				<row>
 					<column class="wf padding-b-small">
 						<!-- raw-helper -->
-						<a href="{{{ location_3_url }}}{{{ utm_add }}}" target="_blank">
+						<a href="{{{ unit_3_url }}}{{{ utm_add }}}" target="_blank">
 							<img infer="retina" class="wf-img" width="288"
-								src="{{{ location_3_image }}}?w=576&ar=2:3&fit=crop&crop=entropy,edges"
-								alt="Click to view and book {{ location_3_name }} on Vacasa.com" />
+								src="{{{ unit_3_image }}}?w=576&ar=5:4&fit=crop&crop=entropy,edges"
+								alt="Click to view and book {{ unit_3_name }} on Vacasa.com" />
 					</column>
 				</row>
 				<row>
 					<column class="wf padding-b">
-						<p class="wf-loc">
-							Explore {{ location_3_num_units }} homes in
-						</p>
 						<p class="wf-name">
-							{{ location_3_name }}
+							{{ unit_3_name }}
+						</p>
+						<p class="wf-loc">
+							{{ unit_3_location }}
 						</p>
 						</a>
 						<!-- /raw-helper -->
@@ -75,19 +75,19 @@
 				<row>
 					<column class="wf padding-b-small">
 						<!-- raw-helper -->
-						<a href="{{{ location_4_url }}}{{{ utm_add }}}" target="_blank">
+						<a href="{{{ unit_4_url }}}{{{ utm_add }}}" target="_blank">
 							<img infer="retina" class="wf-img" width="288"
-								src="{{{ location_4_image }}}?w=576&ar=5:4&fit=crop&crop=entropy,edges"
-								alt="Click to view and book {{ location_4_name }} on Vacasa.com" />
+								src="{{{ unit_4_image }}}?w=576&ar=2.2:3&fit=crop&crop=entropy,edges"
+								alt="Click to view and book {{ unit_4_name }} on Vacasa.com" />
 					</column>
 				</row>
 				<row>
 					<column class="wf padding-b-small">
-						<p class="wf-loc">
-							Explore {{ location_4_num_units }} homes in
-						</p>
 						<p class="wf-name">
-							{{ location_4_name }}
+							{{ unit_4_name }}
+						</p>
+						<p class="wf-loc">
+							{{ unit_4_location }}
 						</p>
 						</a>
 						<!-- /raw-helper -->
