--- a/peat-national-parks/src/CSS/header-white.css
+++ b/peat-national-parks/src/CSS/header-white.css
@@ -37,7 +37,7 @@
 
 span.header-white-btn-txt {
   font-size: 12px;
-  font-family: "Wigrum", Helvetica, Arial, sans-serif;
+  font-family: "wigrum-medium", Helvetica, Arial, sans-serif;
   font-weight: bold;
   text-align: right !important;
   line-height: 20px;
