--- a/peat-national-parks/src/CSS/header.css
+++ b/peat-national-parks/src/CSS/header.css
@@ -43,7 +43,7 @@
 .blu-header.right-header p.header-tagline {
   color: #ffffff;
   font-size: 16px;
-  font-family: "Wigrum", Helvetica, Arial, sans-serif;
+  font-family: "wigrum-medium", Helvetica, Arial, sans-serif;
   font-weight: 400;
   line-height: 16px;
   margin: 0;
