--- a/peat-national-parks/src/partials/cta-small-head.html
+++ b/peat-national-parks/src/partials/cta-small-head.html
@@ -1,12 +1,13 @@
 <container>
 	<row>
-		<column class="cta gutter text-left small-head padding-b padding-t-large">
-			<h1>Find your national park home base</h1>
+		<column class="cta gutter text-left small-head padding-b padding-t-large mobile-padding-med">
+			<h1>Plan your National Park getaway</h1>
 		</column>
 	</row>
 	<row>
-		<column class="cta gutter text-left small-head padding-b-huge">
-			<h2 class="sub">We have you covered, from Arches to Zion</h2>
+		<column class="cta gutter text-left small-head padding-b-huge mobile-padding-med">
+			<h2 class="sub">Find a home base for your next adventure. We’ve got you covered from Arches to Zion.
+			</h2>
 		</column>
 	</row>
 </container>
