--- a/peat-national-parks/src/partials/destination-card-2.html
+++ b/peat-national-parks/src/partials/destination-card-2.html
@@ -1,25 +1,26 @@
 <container>
 	<row>
 		<column class="gutter mobile-padding-med">
-			<container>
-				<row class="dc-container">
+			<container class="outlook-d-card">
+				<row class="dc-container" style="background: #1a475b;">
 
-					<column large="6" small="12" class="text-left padding-t-small mobile-pb-small dc-col-l">
-						<a class="cta" href="{{{ url }}}{{{ utm_add }}}" target="_blank">
-							<p class="dc-preheader">
-								<!--raw-helper-->
-								Find your home near
-								<!--/raw-helper-->
-							</p>
-							<h3 class="dc-loc-name">{{ name }}</h3>
+					<column large="6" small="12" class="text-left padding-t-small mobile-pb-small dc-col-l"
+						style="background: #1a475b;">
+						<a class="cta" href="https://www.vacasa.com{{{ url }}}{{{ utm }}}" target="_blank">
+							<span class="dc-preheader">
+								<!-- {{{{raw-helper}}}} -->
+								Vacation Homes Near
+								<!-- {{{{/raw-helper}}}} -->
+								<!--[if mso]><br/><![endif]-->
+							</span><span class="dc-loc-name">{{ name }}</span><span class="link-arrow">&nbsp;&rarr;</span>
 						</a>
 					</column>
 					<column large="6" small="12" class="text-right dc-col-r">
-						<a href="{{{ url }}}{{{ utm_add }}}" target="_blank">
+						<a href="https://www.vacasa.com{{{ url }}}{{{ utm }}}" target="_blank">
 
 							<img class="dc-img" infer="retina" width="296"
 								src="{{{ image }}}?w=592&q=35&ar=3:1&fit=crop&crop=entropy,edges"
-								alt="Open new page to book {{ name }} on Vacasa.com."></img>
+								alt="Open new page to book {{ name }} on Vacasa.com.">
 
 						</a>
 					</column>
