--- a/peat-national-parks/src/partials/destination-card.html
+++ b/peat-national-parks/src/partials/destination-card.html
@@ -7,9 +7,9 @@
 					<column large="6" small="12" class="text-left main-unit-name padding-t-small mobile-pb-small dt-col-l">
 						<a class="cta" href="{{{ url }}}{{{ utm_add }}}" target="_blank">
 							<p class="dc-preheader">
-								<!--raw-helper-->
+								<!-- {{{{raw-helper}}}} -->
 								{{ park_1_num_units }} popular homes near
-								<!--/raw-helper-->
+								<!-- {{{{/raw-helper}}}} -->
 							</p>
 							<h3 class="dc-loc-name">{{ park_1_name }}</h3>
 						</a>
