--- a/peat-national-parks/src/partials/section-image-header-message-btn.html
+++ b/peat-national-parks/src/partials/section-image-header-message-btn.html
@@ -1,7 +1,7 @@
 <container>
 	<row>
 		<column large="6" small="12" class="section padding-b text-left section-container-left">
-			<!-- raw-helper -->
+			<!-- {{{{raw-helper}}}} -->
 			<a href="{{{ url }}}" target="_blank">
 
 				<img class="side-image" width="268" src="{{{ image }}}?w=568&ar=4:3&fit=crop&crop=entropy,edges"
@@ -22,7 +22,7 @@
 						<p class="sub-message">
 							Looking to stay somewhere different in {{ name }}? Check out some of our other homes.
 						</p>
-						<!-- /raw-helper -->
+						<!-- {{{{/raw-helper}}}} -->
 					</column>
 				</row>
 				<row>
