--- a/peat-trending-units/src/CSS/cta.css
+++ b/peat-trending-units/src/CSS/cta.css
@@ -79,7 +79,7 @@ a {
 .cta h1,
 h2 {
   color: #2c3439;
-  font-family: "Wigrum", Helvetica, Arial, sans-serif;
+  font-family: "Wigrum", Arial, sans-serif;
   font-weight: bold;
 }
 
@@ -144,7 +144,7 @@ h2 {
   color: #707579;
   font-size: 16px;
   line-height: 24px;
-  font-family: "wigrum-medium", Helvetica, Arial, sans-serif;
+  font-family: "wigrum-medium", Arial, sans-serif;
   font-weight: 400;
   text-transform: uppercase;
   letter-spacing: 0.45px;
