--- a/peat-trending-units/src/CSS/search.css
+++ b/peat-trending-units/src/CSS/search.css
@@ -39,7 +39,7 @@
   margin: 0;
   color: #ffffff;
   font-size: 28px;
-  font-family: "wigrum-medium", Helvetica, Arial, sans-serif;
+  font-family: "wigrum-medium", Arial, sans-serif;
   text-align: left;
   font-weight: bold;
   letter-spacing: -0.82px;
@@ -49,7 +49,7 @@
   margin: 0;
   color: #ffffff;
   font-size: 16px;
-  font-family: "wigrum-medium", Helvetica, Arial, sans-serif;
+  font-family: "wigrum-medium", Arial, sans-serif;
   text-align: left;
   font-weight: 500;
   line-height: 32px;
