--- a/peat-trending-units/src/CSS/section.css
+++ b/peat-trending-units/src/CSS/section.css
@@ -33,7 +33,7 @@ img {
 .section h3 {
   color: #2c3439;
   font-size: 28px;
-  font-family: "wigrum-medium", Helvetica, Arial, sans-serif;
+  font-family: "wigrum-medium", Arial, sans-serif;
   font-weight: 500;
   letter-spacing: -0.5px;
   line-height: 36px;
@@ -44,7 +44,7 @@ img {
   height: auto;
   color: #2c3439;
   font-size: 21px;
-  font-family: "Wigrum", Helvetica, Arial, sans-serif;
+  font-family: "wigrum-medium", Arial, sans-serif;
   font-weight: bold;
   letter-spacing: -0.2px;
   line-height: 28px;
