--- a/peat-trending-units/src/CSS/vacasa-banner-v3.css
+++ b/peat-trending-units/src/CSS/vacasa-banner-v3.css
@@ -7,7 +7,7 @@ h3.vacasa-banner {
   margin: 0;
   color: #2c3439;
   font-size: 28px;
-  font-family: "wigrum-medium", Helvetica, Arial, sans-serif;
+  font-family: "wigrum-medium", Arial, sans-serif;
   font-weight: 600;
   letter-spacing: -0.5px;
   line-height: 36px;
