--- a/peat-trending-units/src/CSS/waterfall.css
+++ b/peat-trending-units/src/CSS/waterfall.css
@@ -28,7 +28,7 @@ a.wf p.wf {
 
 .wf-name {
   color: #2c3439;
-  font-family: "wigrum-medium", Helvetica, Arial, sans-serif;
+  font-family: "wigrum-medium", Arial, sans-serif;
   font-size: 16px;
   line-height: 18px;
 }
