--- a/peat-trending-units/src/partials/cta-small-head.html
+++ b/peat-trending-units/src/partials/cta-small-head.html
@@ -29,9 +29,9 @@
 		<column large="7" small="12" class="cta gutter text-left main-unit-name mobile-padding-med padding-b">
 			<a class="cta" href="{{{ url }}}{{{ utm_add }}}" target="_blank">
 				<p class="unit-attributes">
-					<!-- raw-helper -->
+					<!-- {{{{raw-helper}}}} -->
 					{{ location_1_num_units }} popular homes near
-					<!-- /raw-helper -->
+					<!-- {{{{/raw-helper}}}} -->
 				</p>
 				<p class="location-card-name">{{ name }}</p>
 			</a>
@@ -57,9 +57,9 @@
 		<column class="cta left-col-item text-left main-unit-name mobile-padding-med padding-b">
 			<a class="cta" href="{{{ location_2_url }}}{{{ utm_add }}}" target="_blank">
 				<p class="unit-attributes">
-					<!-- raw-helper -->
+					<!-- {{{{raw-helper}}}} -->
 					{{ location_2_num_units }} popular homes near
-					<!-- /raw-helper -->
+					<!-- {{{{/raw-helper}}}} -->
 				</p>
 				<p class="location-card-name">{{ location_2_name }}</p>
 			</a>
