--- a/peat-trending-units/src/partials/fixed-basic-card-5.html
+++ b/peat-trending-units/src/partials/fixed-basic-card-5.html
@@ -1,4 +1,4 @@
-<!-- raw-helper -->
+<!-- {{{{raw-helper}}}} -->
 <column class="fixed left-col-item mobile-padding-med padding-b-large" large="6" small="6">
 	<a href="{{{location_3_url}}}{{{ utm_add }}}" target="_blank" class="unit-card-link">
 		<img infer="retina" class="unit-card-image padding-b-small"
@@ -11,5 +11,5 @@
 		</h3>
 
 	</a>
-	<!-- /raw-helper -->
+	<!-- {{{{/raw-helper}}}} -->
 </column>
