--- a/peat-trending-units/src/partials/fixed-basic-card-6.html
+++ b/peat-trending-units/src/partials/fixed-basic-card-6.html
@@ -1,4 +1,4 @@
-<!-- raw-helper -->
+<!-- {{{{raw-helper}}}} -->
 <column class="fixed right-col-item mobile-padding-med padding-b-large" large="6" small="6">
 	<a href="{{{location_4_url}}}{{{ utm_add }}}" target="_blank" class="unit-card-link">
 		<img infer="retina" class="unit-card-image padding-b-small"
@@ -10,5 +10,5 @@
 			{{location_4_name}}
 		</h3>
 	</a>
-	<!-- /raw-helper -->
+	<!-- {{{{/raw-helper}}}} -->
 </column>
