--- a/peat-trending-units/src/partials/image-waterfall-2.html
+++ b/peat-trending-units/src/partials/image-waterfall-2.html
@@ -5,7 +5,7 @@
 			<container class="wf-container">
 				<row>
 					<column class="wf padding-b-small">
-						<!-- raw-helper -->
+						<!-- {{{{raw-helper}}}} -->
 						<a href="{{{ unit_1_url }}}{{{ utm_add }}}" target="_blank">
 							<img infer="retina" class="wf-img" width="288"
 								src="{{{ unit_1_image }}}?w=576&ar=3:4&fit=crop&crop=entropy,edges"
@@ -21,12 +21,12 @@
 							{{ unit_1_location }}
 						</p>
 						</a>
-						<!-- /raw-helper -->
+						<!-- {{{{/raw-helper}}}} -->
 					</column>
 				</row>
 				<row>
 					<column class="wf padding-b-small">
-						<!-- raw-helper -->
+						<!-- {{{{raw-helper}}}} -->
 						<a href="{{{ unit_2_url }}}{{{ utm_add }}}" target="_blank">
 							<img infer="retina" class="wf-img" width="288"
 								src="{{{ unit_2_image }}}?w=576&ar=4:3&fit=crop&crop=entropy,edges"
@@ -42,7 +42,7 @@
 							{{ unit_2_location }}
 						</p>
 						</a>
-						<!-- /raw-helper -->
+						<!-- {{{{/raw-helper}}}} -->
 					</column>
 				</row>
 			</container>
@@ -53,7 +53,7 @@
 			<container class="wf-container">
 				<row>
 					<column class="wf padding-b-small">
-						<!-- raw-helper -->
+						<!-- {{{{raw-helper}}}} -->
 						<a href="{{{ unit_3_url }}}{{{ utm_add }}}" target="_blank">
 							<img infer="retina" class="wf-img" width="288"
 								src="{{{ unit_3_image }}}?w=576&ar=5:4&fit=crop&crop=entropy,edges"
@@ -69,12 +69,12 @@
 							{{ unit_3_location }}
 						</p>
 						</a>
-						<!-- /raw-helper -->
+						<!-- {{{{/raw-helper}}}} -->
 					</column>
 				</row>
 				<row>
 					<column class="wf padding-b-small">
-						<!-- raw-helper -->
+						<!-- {{{{raw-helper}}}} -->
 						<a href="{{{ unit_4_url }}}{{{ utm_add }}}" target="_blank">
 							<img infer="retina" class="wf-img" width="288"
 								src="{{{ unit_4_image }}}?w=576&ar=2.2:3&fit=crop&crop=entropy,edges"
@@ -90,7 +90,7 @@
 							{{ unit_4_location }}
 						</p>
 						</a>
-						<!-- /raw-helper -->
+						<!-- {{{{/raw-helper}}}} -->
 					</column>
 				</row>
 			</container>
