--- a/peat-national-parks/src/CSS/base.css
+++ b/peat-national-parks/src/CSS/base.css
@@ -16,6 +16,8 @@ div {
 
 body {
   background-color: #fbfbfc;
+  padding-top: 24px;
+  padding-bottom: 24px;
 }
 
 .responsive-container {
@@ -115,6 +117,9 @@ a {
 }
 
 @media only screen and (max-width: 600px) {
+  body {
+    padding: 0 !important;
+  }
   .mobile-padding-large {
     padding-left: 32px !important;
     padding-right: 32px !important;
