--- a/peat-national-parks/src/partials/four-box-row.html
+++ b/peat-national-parks/src/partials/four-box-row.html
@@ -6,7 +6,7 @@
 				<row>
 					{{#each four_box}}
 						<column class="four-box padding-b-small" large="3" small="6">
-							<!-- raw-helper -->
+							<!-- {{{{raw-helper}}}} -->
 							<a href="{{{ url }}}{{{ utm_add }}}" target="_blank">
 								<img infer="retina" class="padding-b-small four-b-image" width="142"
 									src="{{{ image }}}?vib=20&w=568&ar=4:3&fit=crop&crop=entropy,edges"
@@ -18,7 +18,7 @@
 									{{ desc }}
 								</p>
 							</a>
-							<!-- /raw-helper -->
+							<!-- {{{{/raw-helper}}}} -->
 						</column>
 					{{/each}}
 				</row>
