--- a/peat-trending-units/src/CSS/vacasa-banner.css
+++ b/peat-trending-units/src/CSS/vacasa-banner.css
@@ -9,7 +9,7 @@ h3.vacasa-banner {
   padding: 0;
   color: rgb(44, 52, 57);
   font-size: 24px;
-  font-family: "Wigrum", Helvetica, Arial, sans-serif;
+  font-family: "wigrum-medium", Arial, sans-serif;
   font-weight: bold;
   letter-spacing: -0.13px;
   /* line-height: 40px; */
@@ -23,7 +23,7 @@ h3.vacasa-banner-2 {
   padding: 0;
   color: rgb(44, 52, 57);
   font-size: 21px;
-  font-family: "Wigrum", Helvetica, Arial, sans-serif;
+  font-family: "wigrum-medium", Arial, sans-serif;
   font-weight: bold;
   letter-spacing: -0.2px;
   line-height: 28px;
