--- a/peat-trending-units/src/partials/cta-head-name-img-txt-btn.html
+++ b/peat-trending-units/src/partials/cta-head-name-img-txt-btn.html
@@ -7,28 +7,28 @@
 	<row>
 		<column class="cta gutter padding-b-small text-left">
 			<a href="{{{ url }}}{{{ utm_add }}}" target="_blank">
-				<!-- raw-helper -->
+				<!-- {{{{raw-helper}}}} -->
 				<p class="unit-name">{{ reservation_unit_name }}</p>
-				<!-- /raw-helper -->
+				<!-- {{{{/raw-helper}}}} -->
 			</a>
 		</column>
 	</row>
 	<row>
 		<column class="cta gutter padding-b">
 			<a href="{{{ url }}}{{{ utm_add }}}" target="_blank">
-				<!-- raw-helper -->
+				<!-- {{{{raw-helper}}}} -->
 				<img infer="retina" width="556" src="{{{ image }}}?w=1112&ar=2:1&fit=crop&crop=entropy,edges"
 					alt="Open a new page to add guest to your trip to {{ name }}."></img>
-				<!-- /raw-helper -->
+				<!-- {{{{/raw-helper}}}} -->
 			</a>
 		</column>
 	</row>
 	<row>
 		<column class="cta gutter padding-b-large text-left">
-			<!-- raw-helper -->
+			<!-- {{{{raw-helper}}}} -->
 			<p class="sub-message">Let your guests know that it's almost time to start packing for
 				{{ city }}. Once added, they'll receive the details of your upcoming trip.</p>
-			<!-- /raw-helper -->
+			<!-- {{{{/raw-helper}}}} -->
 		</column>
 	</row>
 </container>
