--- a/peat-trending-units/src/partials/image-waterfall.html
+++ b/peat-trending-units/src/partials/image-waterfall.html
@@ -3,47 +3,76 @@
 		<column large="6" small="6" class="fixed left-col-item mobile-padding-small-l padding-b">
 
 			<container class="wf-container">
-				<!-- raw-helper -->
-				{{#if this.destinations.trending.0.name}}
+				<!-- {{{{raw-helper}}}} -->
+				{{#if this.recommendations.trending.0.name}}
 					<row>
 						<column class="wf padding-b-small">
 
-							<a href="https://www.vacasa.com{{{ this.destinations.trending.0.url }}}{{{ this.utms }}}" target="_blank">
+							<a href="https://www.vacasa.com{{#if this.recommendations.trending.0.full_slug}}{{{ this.recommendations.trending.0.full_slug }}}{{else}}{{{ this.recommendations.trending.0.url }}}{{/if}}{{{ this.utms }}}"
+								target="_blank">
 								<img infer="retina" class="wf-img" width="288"
-									src="{{{ this.destinations.trending.0.dest_imageid }}}?w=576&q=55&ar=4:3&fit=crop&crop=entropy,edges"
-									alt="Click to view and book {{ this.destinations.trending.0.name }} on Vacasa.com" /></a>
+									src="{{{ this.recommendations.trending.0.dest_imageid }}}?w=576&q=55&ar=4:3&fit=crop&crop=entropy,edges"
+									alt="Click to view and book {{ this.recommendations.trending.0.name }} on Vacasa.com" /></a>
 						</column>
 					</row>
 					<row>
 						<column class="wf padding-b">
-							<a href="https://www.vacasa.com{{{ this.destinations.trending.0.url }}}{{{ this.utms }}}" target="_blank">
+							<a href="https://www.vacasa.com{{#if this.recommendations.trending.0.full_slug}}{{{ this.recommendations.trending.0.full_slug }}}{{else}}{{{ this.recommendations.trending.0.url }}}{{/if}}{{{ this.utms }}}"
+								target="_blank">
 								<p class="wf-loc">
-									Explore {{ this.destinations.trending.0.active_unit_count }} homes in
+									Explore {{ this.recommendations.trending.0.active_unit_count }} homes in
 								</p>
 								<p class="wf-name">
-									{{ this.destinations.trending.0.name }}
+									{{ this.recommendations.trending.0.name }}
 								</p>
 							</a>
 						</column>
 					</row>
 				{{/if}}
-				{{#if this.destinations.trending.2.name}}
+				{{#if this.recommendations.trending.2.name}}
 					<row>
 						<column class="wf padding-b-small">
-							<a href="https://www.vacasa.com{{{ this.destinations.trending.2.url }}}{{{ this.utms }}}" target="_blank">
+							<a href="https://www.vacasa.com{{#if this.recommendations.trending.2.full_slug}}{{{ this.recommendations.trending.2.full_slug }}}{{else}}{{{ this.recommendations.trending.2.url }}}{{/if}}{{{ this.utms }}}"
+								target="_blank">
 								<img infer="retina" class="wf-img" width="288"
-									src="{{{ this.destinations.trending.2.dest_imageid }}}?w=576&q=55&ar=3:4&fit=crop&crop=entropy,edges"
-									alt="Click to view and book {{ this.destinations.trending.2.name }} on Vacasa.com" /></a>
+									src="{{{ this.recommendations.trending.2.dest_imageid }}}?w=576&q=55&ar=4:5&fit=crop&crop=entropy,edges"
+									alt="Click to view and book {{ this.recommendations.trending.2.name }} on Vacasa.com" /></a>
 						</column>
 					</row>
 					<row>
 						<column class="wf padding-b">
-							<a href="https://www.vacasa.com{{{ this.destinations.trending.2.url }}}{{{ this.utms }}}" target="_blank">
+							<a href="https://www.vacasa.com{{#if this.recommendations.trending.2.full_slug}}{{{ this.recommendations.trending.2.full_slug }}}{{else}}{{{ this.recommendations.trending.2.url }}}{{/if}}{{{ this.utms }}}"
+								target="_blank">
 								<p class="wf-loc">
-									Explore {{ this.destinations.trending.2.active_unit_count }} homes in
+									Explore {{ this.recommendations.trending.2.active_unit_count }} homes in
 								</p>
 								<p class="wf-name">
-									{{ this.destinations.trending.2.name }}
+									{{ this.recommendations.trending.2.name }}
+								</p>
+							</a>
+						</column>
+					</row>
+				{{/if}}
+				{{#if this.recommendations.trending.4.name}}
+					<row>
+						<column class="wf padding-b-small">
+
+							<a href="https://www.vacasa.com{{#if this.recommendations.trending.4.full_slug}}{{{ this.recommendations.trending.4.full_slug }}}{{else}}{{{ this.recommendations.trending.4.url }}}{{/if}}{{{ this.utms }}}"
+								target="_blank">
+								<img infer="retina" class="wf-img" width="288"
+									src="{{{ this.recommendations.trending.4.dest_imageid }}}?w=576&q=55&ar=3.5:4&fit=crop&crop=entropy,edges"
+									alt="Click to view and book {{ this.recommendations.trending.4.name }} on Vacasa.com" /></a>
+						</column>
+					</row>
+					<row>
+						<column class="wf padding-b">
+							<a href="https://www.vacasa.com{{#if this.recommendations.trending.4.full_slug}}{{{ this.recommendations.trending.4.full_slug }}}{{else}}{{{ this.recommendations.trending.4.url }}}{{/if}}{{{ this.utms }}}"
+								target="_blank">
+								<p class="wf-loc">
+									Explore {{ this.recommendations.trending.4.active_unit_count }} homes in
+								</p>
+								<p class="wf-name">
+									{{ this.recommendations.trending.4.name }}
 								</p>
 							</a>
 						</column>
@@ -55,51 +84,80 @@
 		<column large="6" small="6" class="fixed right-col-item mobile-padding-small-r padding-b">
 
 			<container class="wf-container">
-				{{#if this.destinations.trending.1.name}}
+				{{#if this.recommendations.trending.1.name}}
 					<row>
 						<column class="wf padding-b-small">
-							<a href="https://www.vacasa.com{{{ this.destinations.trending.1.url }}}{{{ this.utms }}}" target="_blank">
+							<a href="https://www.vacasa.com{{#if this.recommendations.trending.1.full_slug}}{{{ this.recommendations.trending.1.full_slug }}}{{else}}{{{ this.recommendations.trending.1.url }}}{{/if}}{{{ this.utms }}}"
+								target="_blank">
 								<img infer="retina" class="wf-img" width="288"
-									src="{{{ this.destinations.trending.1.dest_imageid }}}?w=576&q=55&ar=2:3&fit=crop&crop=entropy,edges"
-									alt="Click to view and book {{ this.destinations.trending.1.name }} on Vacasa.com" /></a>
+									src="{{{ this.recommendations.trending.1.dest_imageid }}}?w=576&q=55&ar=2:3&fit=crop&crop=entropy,edges"
+									alt="Click to view and book {{ this.recommendations.trending.1.name }} on Vacasa.com" /></a>
 						</column>
 					</row>
 					<row>
 						<column class="wf padding-b">
-							<a href="https://www.vacasa.com{{{ this.destinations.trending.1.url }}}{{{ this.utms }}}" target="_blank">
+							<a href="https://www.vacasa.com{{#if this.recommendations.trending.1.full_slug}}{{{ this.recommendations.trending.1.full_slug }}}{{else}}{{{ this.recommendations.trending.1.url }}}{{/if}}{{{ this.utms }}}"
+								target="_blank">
 								<p class="wf-loc">
-									Explore {{ this.destinations.trending.1.active_unit_count }} homes in
+									Explore {{ this.recommendations.trending.1.active_unit_count }} homes in
 								</p>
 								<p class="wf-name">
-									{{ this.destinations.trending.1.name }}
+									{{ this.recommendations.trending.1.name }}
 								</p>
 							</a>
 						</column>
 					</row>
 				{{/if}}
-				{{#if this.destinations.trending.3.name}}
+				{{#if this.recommendations.trending.3.name}}
 					<row>
 						<column class="wf padding-b-small">
-							<a href="https://www.vacasa.com{{{ this.destinations.trending.3.url }}}{{{ this.utms }}}" target="_blank">
+							<a href="https://www.vacasa.com{{#if this.recommendations.trending.3.full_slug}}{{{ this.recommendations.trending.3.full_slug }}}{{else}}{{{ this.recommendations.trending.3.url }}}{{/if}}{{{ this.utms }}}"
+								target="_blank">
 								<img infer="retina" class="wf-img" width="288"
-									src="{{{ this.destinations.trending.3.dest_imageid }}}?w=576&q=55&ar=5:4&fit=crop&crop=entropy,edges"
-									alt="Click to view and book {{ this.destinations.trending.3.name }} on Vacasa.com" /></a>
+									src="{{{ this.recommendations.trending.3.dest_imageid }}}?w=576&q=55&ar=5:4.5&fit=crop&crop=entropy,edges"
+									alt="Click to view and book {{ this.recommendations.trending.3.name }} on Vacasa.com" /></a>
 						</column>
 					</row>
 					<row>
 						<column class="wf padding-b-small">
-							<a href="https://www.vacasa.com{{{ this.destinations.trending.3.url }}}{{{ this.utms }}}" target="_blank">
+							<a href="https://www.vacasa.com{{#if this.recommendations.trending.3.full_slug}}{{{ this.recommendations.trending.3.full_slug }}}{{else}}{{{ this.recommendations.trending.3.url }}}{{/if}}{{{ this.utms }}}"
+								target="_blank">
 								<p class="wf-loc">
-									Explore {{ this.destinations.trending.3.active_unit_count }} homes in
+									Explore {{ this.recommendations.trending.3.active_unit_count }} homes in
 								</p>
 								<p class="wf-name">
-									{{ this.destinations.trending.3.name }}
+									{{ this.recommendations.trending.3.name }}
 								</p>
 							</a>
 
 						</column>
 					</row>
-				{{/if}}<!-- /raw-helper -->
+				{{/if}}
+				{{#if this.recommendations.trending.5.name}}
+					<row>
+						<column class="wf padding-b-small">
+							<a href="https://www.vacasa.com{{#if this.recommendations.trending.5.full_slug}}{{{ this.recommendations.trending.5.full_slug }}}{{else}}{{{ this.recommendations.trending.5.url }}}{{/if}}{{{ this.utms }}}"
+								target="_blank">
+								<img infer="retina" class="wf-img" width="288"
+									src="{{{ this.recommendations.trending.5.dest_imageid }}}?w=576&q=55&ar=13:10&fit=crop&crop=entropy,edges"
+									alt="Click to view and book {{ this.recommendations.trending.5.name }} on Vacasa.com" /></a>
+						</column>
+					</row>
+					<row>
+						<column class="wf padding-b-small">
+							<a href="https://www.vacasa.com{{#if this.recommendations.trending.5.full_slug}}{{{ this.recommendations.trending.5.full_slug }}}{{else}}{{{ this.recommendations.trending.5.url }}}{{/if}}{{{ this.utms }}}"
+								target="_blank">
+								<p class="wf-loc">
+									Explore {{ this.recommendations.trending.5.active_unit_count }} homes in
+								</p>
+								<p class="wf-name">
+									{{ this.recommendations.trending.5.name }}
+								</p>
+							</a>
+
+						</column>
+					</row>
+				{{/if}}<!-- {{{{/raw-helper}}}} -->
 			</container>
 
 		</column>
