--- a/Transactionals/2-Reservation_Reminder/src/partials/t_reservation-add-info.html
+++ b/Transactionals/2-Reservation_Reminder/src/partials/t_reservation-add-info.html
@@ -11,8 +11,9 @@
 			</h3>
 
 			<p class="body-text">
-				No more searching your inbox or snapping screenshots--get entry codes in offline mode, then
-				connect to WiFi instantly when you walk in the door.</p>
+				If you need to cancel your trip or change the dates, give us a call at 800-544-0300. You
+				can also cancel in your
+				online <a href="https://www.vacasa.com/trip/">Trip Manager</a>.</p>
 		</column>
 	</row>
 	<row>
