--- a/Transactionals/2-Reservation_Reminder/src/partials/t_lead.html
+++ b/Transactionals/2-Reservation_Reminder/src/partials/t_lead.html
@@ -2,7 +2,7 @@
 <container class="lead">
 	<row>
 		<column class="text-left gutter padding-b mbl-pad-sm">
-			<h1 class="small-head">Just Checking In</h1>
+			<h1 class="small-head">We're counting down the days</h1>
 		</column>
 	</row>
 	<row>
