--- a/Transactionals/2-Reservation_Reminder/src/partials/t_quick_reservation_info_pane.html
+++ b/Transactionals/2-Reservation_Reminder/src/partials/t_quick_reservation_info_pane.html
@@ -1,32 +1,35 @@
 <container class="res-info-pane" style="background: #ffffff;">
 	<row style="background: #f8f9f9;" class="res-info-pane top-row">
-		<column large="2" small="0" class="left-panel-item dis-none-sm padding-t-large"> <img infer="retina"
-				src="https://vacasa-units.imgix.net/{{{ UNIT_PRIMARY_IMAGE_ID }}}.jpg?w=168&mask=corners&corner-radius=10,10,10,10&ar=1:1&fit=crop&crop=entropy,edges"
-				alt="">
+		<column large="2" small="0" class="left-panel-item dis-none-sm padding-t-large"><a href="{{ TRIP_PORTAL_URL }}"><img
+					infer="retina"
+					src="https://vacasa-units.imgix.net/{{{ UNIT_PRIMARY_IMAGE_ID }}}.jpg?w=168&mask=corners&corner-radius=10,10,10,10&ar=1:1&fit=crop&crop=entropy,edges"
+					alt=""></a>
 		</column>
 		<column large="4" small="6" class="left-panel-item padding-t-large padding-b">
-			<span class="info-prehead up-case">Check in</span>
+			<a href="{{ TRIP_PORTAL_URL }}">
+				<span class="info-prehead up-case">Check in</span>
 
-			<p class="reservation-info-value">
-				<!-- raw-helper -->
-				{{date RESERVATION_FIRST_NIGHT "ddd MMM D" datejs=false }}<br>
-				<span class="info-subhead">{{date UNIT_CHECK_IN_TIME "h:mm a" }}</span>
-				<!-- /raw-helper -->
-			</p>
-
+				<p class="reservation-info-value">
+					<!-- raw-helper -->
+					{{date RESERVATION_FIRST_NIGHT "ddd MMM D" datejs=false }}<br>
+					<span class="info-subhead">{{date UNIT_CHECK_IN_TIME "h:mm a" }}</span>
+					<!-- /raw-helper -->
+				</p>
+			</a>
 		</column>
 		<column large="1" small="0" class="padding-b dis-none-sm text-center icon-col">
 			<img class="icon" src="http://vacasa-email.imgix.net/carret.png?h=63" alt="">
 		</column>
 		<column large="4" small="6" class="right-panel-item padding-t-large padding-b text-right">
-			<span class="info-prehead up-case">Check out</span>
+			<a href="{{ TRIP_PORTAL_URL }}"><span class="info-prehead up-case">Check out</span>
 
-			<p class="reservation-info-value">
-				<!-- raw-helper -->
-				{{date RESERVATION_LAST_NIGHT "ddd MMM D" datejs=false }}<br>
-				<span class="info-subhead">{{date UNIT_CHECK_OUT_TIME "h:mm a" }}</span>
-				<!-- /raw-helper -->
-			</p>
+				<p class="reservation-info-value">
+					<!-- raw-helper -->
+					{{date RESERVATION_LAST_NIGHT "ddd MMM D" datejs=false }}<br>
+					<span class="info-subhead">{{date UNIT_CHECK_OUT_TIME "h:mm a" }}</span>
+					<!-- /raw-helper -->
+				</p>
+			</a>
 
 		</column>
 		<column large="1" small="0">
@@ -41,7 +44,8 @@
 			<hr style="border-top:1px solid #CCD6DB; width: 100%; max-width:600px; height:1px;" />
 		</column>
 		<column large="1" small="0">
-			<img class="link-icon" src="http://vacasa-email.imgix.net/external-link.png?h=24" alt="">
+			<a href="{{ TRIP_PORTAL_URL }}"><img class="link-icon" src="http://vacasa-email.imgix.net/external-link.png?h=24"
+					alt=""></a>
 		</column>
 
 	</row>
@@ -51,28 +55,32 @@
 	<row style="background: #f8f9f9;" class="res-info-pane bottom-row">
 		<column large="2" small="0" class="left-panel-item dis-none-sm padding-t-large padding-b-large"></column>
 		<column large="4" small="6" class="left-panel-item padding-t-large padding-b-large">
-			<span class="info-prehead up-case">Guests</span>
+			<a href="{{ TRIP_PORTAL_URL }}">
+				<span class="info-prehead up-case">Guests</span>
 
-			<p class="reservation-info-value">
-				<!-- raw-helper -->
-				{{ RESERVATION_ADULTS }} adult{{#isnt RESERVATION_ADULTS 1}}s{{/isnt}}, {{ RESERVATION_CHILDREN }}
-				child{{#isnt RESERVATION_CHILDREN 1}}ren{{/isnt}}<br>
-				<span class="info-subhead">{{ RESERVATION_PETS }} dog{{#isnt RESERVATION_PETS 1}}s{{/isnt}}</span>
-				<!-- /raw-helper -->
-			</p>
+				<p class="reservation-info-value">
+					<!-- raw-helper -->
+					{{ RESERVATION_ADULTS }} adult{{#isnt RESERVATION_ADULTS 1}}s{{/isnt}}, {{ RESERVATION_CHILDREN }}
+					child{{#isnt RESERVATION_CHILDREN 1}}ren{{/isnt}}<br>
+					<span class="info-subhead">{{ RESERVATION_PETS }} dog{{#isnt RESERVATION_PETS 1}}s{{/isnt}}</span>
+					<!-- /raw-helper -->
+				</p>
+			</a>
 
 		</column>
 		<column large="1" small="0" class="padding-b-large dis-none-sm icon-col">
 			<img class="icon" src="http://vacasa-email.imgix.net/v-line.png?h=52" alt="">
 		</column>
 		<column large="4" small="6" class="right-panel-item padding-t-large padding-b-large text-right">
-			<span class="info-prehead up-case">Confirmation</span>
+			<a href="{{ TRIP_PORTAL_URL }}">
+				<span class="info-prehead up-case">Confirmation</span>
 
-			<p class="reservation-info-value lrg">
-				<!-- raw-helper -->
-				{{ RESERVATION_ID }}
-				<!-- /raw-helper -->
-			</p>
+				<p class="reservation-info-value lrg">
+					<!-- raw-helper -->
+					{{ RESERVATION_ID }}
+					<!-- /raw-helper -->
+				</p>
+			</a>
 
 		</column>
 		<column large="1" small="0">
